--- a/templates/search.html
+++ b/templates/search.html
@@ -28,7 +28,18 @@
         </div>
         <div class="col-xs-12 col-sm-12 col-md-7 excerpet">
           <h3>{{ i[3] }}</h3>
-          <h5><a href="/stop/{{ i[1] }}/time/next_bus/">Next Buses</a></h5>
+          <form action="/stop/{{ i[1] }}/" method="post">
+            <div class="form-group row col-5">
+              <label>Leave empty for now</label>
+              <input type="date" id="date" name="date" class="form-control">
+            </div>
+            <div class="form-group row col-5">
+              <input type="time" id="time" name="time" class="form-control">
+            </div>
+            <div class="form-group row col-7">
+              <button type="submit" id="next" name="date-time" class="btn btn-primary">Get Times</button>
+            </div>
+          </form>
         </div>
       </div>
       {% endfor %}
