--- a/templates/search.html
+++ b/templates/search.html
@@ -12,7 +12,7 @@
 
     <header class="mb20">
       <h1>Search Results</h1>
-      <h2 class="lead"><strong class="text-danger">{{ len_results }}</strong> results were found for <strong class="text-danger">{{ search_term }}</strong></h2>
+      <h2><strong class="text-danger">{{ len_results }}</strong> results were found for <strong class="text-danger">{{ search_term }}</strong></h2>
     </header>
 
     <div class="col-xs-12 col-sm-6 col-md-12">
@@ -21,23 +21,22 @@
       <div class="search-result row">
         <div class="col-xs-12 col-sm-12 col-md-2">
           <ul class="meta-search">
-            <li><span>Street:  {{ i[4] }}</span></li>
-            <li><span>Locality:  {{ i[5] }}</span></li>
+            <li><span>Bearing:  {{ i[8] }}</span></li>
+            <li><span>Street:  {{ i[5] }}</span></li>
+            <li><span>Locality:  {{ i[6] }}</span></li>
             <li><span>Stop:  {{ i[2] }}</span></li>
           </ul>
         </div>
-        <div class="col-xs-12 col-sm-12 col-md-7 excerpet">
-          <h3>{{ i[3] }}</h3>
-          <form action="/stop/{{ i[1] }}/" method="post">
-            <div class="form-group row col-5">
-              <label>Leave empty for now</label>
+        <div class="col-xs-12 col-sm-12 col-md-7">
+          <h3>{{ i[3] }} {{ i[7] }}</h3>
+          <form class="form-inline" action="/stop/{{ i[1] }}/" method="post">
+            <div class="form-group col-4">
+              <button type="submit" id="submit-n" name="type" value="next" class="btn btn-primary">Get Times Now</button>
+            </div>
+            <div class="form-group col-5">
+              <button type="submit" id="submit-dt" name="type" value="specific" class="btn btn-primary">Get Times At:</button>
               <input type="date" id="date" name="date" class="form-control">
-            </div>
-            <div class="form-group row col-5">
               <input type="time" id="time" name="time" class="form-control">
-            </div>
-            <div class="form-group row col-7">
-              <button type="submit" id="next" name="date-time" class="btn btn-primary">Get Times</button>
             </div>
           </form>
         </div>
