--- a/templates/search.html
+++ b/templates/search.html
@@ -24,6 +24,7 @@
             <li><span>Bearing:  {{ i[8] }}</span></li>
             <li><span>Street:  {{ i[5] }}</span></li>
             <li><span>Locality:  {{ i[6] }}</span></li>
+            <li><span>Parent Locality: {{ i[] }}</span></li>
             <li><span>Stop:  {{ i[2] }}</span></li>
           </ul>
         </div>
