--- a/templates/next_bus.html
+++ b/templates/next_bus.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-  <link rel="stylesheet" href="http://localhost:5000/static/search.css">
+  <link rel="stylesheet" href="/static/search.css">
   <title>BusStop - Search</title>
 </head>
 <body>
@@ -12,15 +12,25 @@
 
   <header class="mb20">
     <h1></h1>
-    <h2><strong class="text-danger">{{ len_results }}</strong> results were found for <strong class="text-danger">{{ search_term }}</strong></h2>
+    <h2><strong class="text-danger">{{ route_count }}</strong> routes were found with <strong class="text-danger">{{ time_count }}</strong> Stops</h2>
   </header>
 
   <div class="col-xs-12 col-sm-6 col-md-12">
     <!-- Search results -->
-
+    {% for i in json_data["departures"] %}
+    <div>
+      <h3>Route {{ i }}</h3>
+      {% for j in json_data["departures"][i] %}
+      <div class="col-xs-12 col-sm-12 col-md-7">
+        <ul>
+          <h5>{{ j["aimed_departure_time"] }}</h5>
+        </ul>
+      </div>
+      {% endfor %}
+    </div>
+    {% endfor %}
   </div>
 </div>
-<!-- Optional JavaScript -->
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
