--- a/templates/search.html
+++ b/templates/search.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-  <link rel="stylesheet" href="http://localhost:5000/static/search.css">
+  <link rel="stylesheet" href="/static/search.css">
   <title>BusStop - Search</title>
 </head>
 <body>
@@ -19,12 +19,12 @@
       <!-- Search results -->
       {% for i in results %}
       <div class="search-result row">
-        <div class="col-xs-12 col-sm-12 col-md-2">
+        <div class="col-xs-12 col-sm-12 col-md-3">
           <ul class="meta-search">
             <li><span>Bearing:  {{ i[8] }}</span></li>
             <li><span>Street:  {{ i[5] }}</span></li>
             <li><span>Locality:  {{ i[6] }}</span></li>
-            <li><span>Parent Locality: {{ i[] }}</span></li>
+            <li><span>Parent Locality: {{ i[9] }}</span></li>
             <li><span>Stop:  {{ i[2] }}</span></li>
           </ul>
         </div>
