--- a/templates/search.html
+++ b/templates/search.html
@@ -25,7 +25,7 @@
             <li><span>Street:  {{ i[5] }}</span></li>
             <li><span>Locality:  {{ i[6] }}</span></li>
             <li><span>Parent Locality: {{ i[9] }}</span></li>
-            <li><span>Stop:  {{ i[2] }}</span></li>
+            <li><span>Text Code:  {{ i[2] }}</span></li>
           </ul>
         </div>
         <div class="col-xs-12 col-sm-12 col-md-7">
@@ -44,6 +44,7 @@
       </div>
       {% endfor %}
     </div>
+
   </div>
   <!-- Optional JavaScript -->
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
