--- a/templates/search.html
+++ b/templates/search.html
@@ -30,23 +30,30 @@
         </div>
         <div class="col-xs-12 col-sm-12 col-md-7">
           <h3>{{ i[3] }} {{ i[7] }}</h3>
-          <form class="form-inline" action="/stop/{{ i[1] }}/" method="post">
+          <div class="form-inline">
             <div class="form-group col-4">
-              <button type="submit" id="submit-n" name="type" value="next" class="btn btn-primary">Get Times Now</button>
+              <button id="submit-n" onClick="window.location = '/stop/{{ i[1] }}/next'" class="btn btn-primary">Get Times Now</button>
             </div>
             <div class="form-group col-5">
-              <button type="submit" id="submit-dt" name="type" value="specific" class="btn btn-primary">Get Times At:</button>
-              <input type="date" id="date" name="date" class="form-control">
-              <input type="time" id="time" name="time" class="form-control">
+              <button id="submit-dt" onClick="specificTimeRedirect('{{ i[1] }}')" class="btn btn-primary">Get Times At:</button>
+              <input type="date" id="date" class="form-control">
+              <input type="time" id="time" class="form-control">
             </div>
-          </form>
+          </div>
         </div>
       </div>
       {% endfor %}
     </div>
 
   </div>
-  <!-- Optional JavaScript -->
+
+  <script>
+    function specificTimeRedirect(atco) {
+      let date = document.getElementById('date').value;
+      let time = document.getElementById('time').value;
+      window.location = ('/stop/' + atco + '/' + date + '/' + time);
+    }
+  </script>
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
