--- a/templates/next_bus.html
+++ b/templates/next_bus.html
@@ -27,13 +27,14 @@
         </ul>
       </div>
       <div class="col-xs-12 col-sm-12 col-md-7">
-        <a href="/bus/{{ json_data['departures'][i][0]['operator'] }}/{{ json_data['departures'][i][0]['line'] }}/"><h3>Times</h3></a>
+        <h3>Times</h3>
         <ul class="list-group list-group-horizontal">
         {% for j in json_data["departures"][i] %}
           <li class="list-group-item">
             <ul>
               <li><span>{{ j["aimed_departure_time"] }}</span></li>
               <li><span>{{ j["date"]}}</span></li>
+              <li><a href="/bus/{{ j['operator'] }}/{{ j['line'] }}/{{ j['dir'] }}/{{ json_data['atcocode'] }}/{{ j['date'] }}/{{ j['aimed_departure_time'] }}/"><span>View Timetable</span></a></li>
             </ul>
           </li>
         {% endfor %}
