--- a/templates/next_bus.html
+++ b/templates/next_bus.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <link rel="stylesheet" href="/static/search.css">
-  <title>BusStop - Search</title>
+  <title>BusStop | Search</title>
 </head>
 <body>
 <div class="container">
@@ -34,7 +34,7 @@
             <ul>
               <li><span>{{ j["aimed_departure_time"] }}</span></li>
               <li><span>{{ j["date"]}}</span></li>
-              <li><a href="/bus/{{ j['operator'] }}/{{ j['line'] }}/{{ j['dir'] }}/{{ json_data['atcocode'] }}/{{ j['date'] }}/{{ j['aimed_departure_time'] }}/"><span>View Timetable</span></a></li>
+              <li><form action="/bus/{{ j['operator'] }}/{{ j['line'] }}/timetable" method="post"><button type="submit" class="btn btn-primary" name="url" value="{{ j['id'] }}">View Timetable</button></form></li>
             </ul>
           </li>
         {% endfor %}
